Applied css fix to align create doc btn text when it becomes two lines (#1218)
* Applied media query to align create document btn text when it becomes two lines

* Applied flex content alignment to center doc toolbar create btn text

--- a/app/addons/documents/assets/less/index-results.less
+++ b/app/addons/documents/assets/less/index-results.less
@@ -71,6 +71,8 @@
 }
 
 .document-result-screen__toolbar-create-btn {
+  display: flex;
+  align-items: center;
   height: 42px;
 }
 
